--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
    <h1>Hello this my quest</h1> 
+   <h2>I dont no what to change</h2>
+   <h1>hello my star</h1>
 </body>
 </html>
